--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "prepush": ""
   },
   "dependencies": {
     "pinia": "^2.0.32",
@@ -20,6 +21,8 @@
     "@vue/test-utils": "^2.3.0",
     "jsdom": "^21.1.0",
     "lodash": "^4.17.21",
+    "npm-run-all": "^4.1.5",
+    "semantic-release": "^20.1.1",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
   }
