--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: |
+          npm install
           npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
