--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
-    "prepush": ""
+    "prepush": "npm run build && git commit --amend --no-edit"
   },
   "dependencies": {
     "pinia": "^2.0.32",
@@ -22,7 +22,6 @@
     "jsdom": "^21.1.0",
     "lodash": "^4.17.21",
     "npm-run-all": "^4.1.5",
-    "semantic-release": "^20.1.1",
     "vite": "^4.1.4",
     "vitest": "^0.29.1"
   }
