--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
-    "prepush": "npm run build && git commit --amend --no-edit"
+    "pre-push": "npm run build && git commit --amend --no-edit"
   },
   "dependencies": {
     "pinia": "^2.0.32",
